--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name"> </string>
+    <string name="app_name">Водный баланс</string>
     <string name="add_data">Введите количество выпитой воды \n(в мл)</string>
     <string name="confirm">Подтвердить \n ввод</string>
     <string name="statistics">К статистике</string>
