--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,6 @@
     <string name="gender">Ваш пол</string>
     <string name="weight">Введите вес</string>
     <string name="icon">Icon</string>
-    <string name="waterAmount">Выпито %d мл, что составляет %f от нормы</string>
+    <string name="waterAmount">Выпито %.2f мл, что составляет %f от нормы</string>
     <string name="toSettings">Пожалуйста, заполните информацию о себе в настройках</string>
 </resources>
